# uberallfs

./: .gitignore  Cargo.toml  README.md  README.org
.branchlocal/: devel_test.sh
.githooks/: pre-commit
doc/: UBERALLFS.md  UBERALLFS.org
fuse/: Cargo.toml
fuse/src/: errors.rs  handledb.rs  inodedb.rs  lib.rs  mount.rs  optargs.rs  prelude.rs  uberallfs.rs
objectstore/: Cargo.toml
objectstore/src/: args.rs  errors.rs  gc.rs  handle.rs  identifier.rs  identifier_kind.rs  init.rs  lib.rs  lock.rs  mkdir.rs  object.rs  objectpath.rs  objectstore.rs  opath.rs  optargs.rs  permissions.rs  prelude.rs  rev_cursor.rs  show.rs  vfs.rs
src/: args.rs  logging.rs  main.rs  optargs.rs
tests/: plumbing.rs  uberallfs.rs
uberall/: Cargo.toml
uberall/src/: daemon.rs  lib.rs  prelude.rs  uberall.rs
