[package]
name = "uberallfs"
version = "0.0.0"
authors = ["Christian Thäter <ct@pipapo.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "1.11"
clap = "2.33"
objectstore = { path = "objectstore" }
libc = "0.2"


[workspace]
members = [
        "objectstore",
#        "object",
#        "node",
#        "fuse",
#        "accesscontrol",
]

