[package]
name = "uberallfs"
version = "0.0.0"
authors = ["Christian Thäter <ct@pipapo.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "1.11"
clap = "2.33"
libc = "0.2"
thiserror = "1.0"
anyhow = "1.0"
uberall = { path = "uberall", version = "0.1" }
objectstore = { path = "objectstore", version = "0.1" }
fuse = { path = "fuse", version = "0.1" }

[dev-dependencies]
tempfile = "3.2"
bintest = "1.0"
testcall = "0.1.0"

[workspace]
members = [
        "uberall",
        "objectstore",
        "fuse",
#        "node",
#        "accesscontrol",
]

