[package]
name = "uberallfs"
version = "0.0.0"
authors = ["Christian Thäter <ct@pipapo.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uberall = { path = "uberall", version = "0.1" }
objectstore = { path = "objectstore", version = "0.1" }
fuse = { path = "fuse", version = "0.1" }

[dev-dependencies]
tempfile = "3.2"
bintest = "1.0"
testcall = "1.0.0"
testpath = "0.1.1"
lazy_static = "1.4"

[workspace]
members = [
        "uberall",
        "objectstore",
        "fuse",
#        "node",
#        "accesscontrol",
]
