[package]
name = "objectstore"
version = "0.1.0"
authors = ["Christian Thäter <ct@pipapo.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unchecked_unwrap = "3.0"
base64 = "0.13"
regex = "1"
openat_ct = "0.1"
uberall = { path = "../uberall" }
